--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,11 +1,2 @@
-ifeq ($(shell getconf LONG_BIT),64)
-        PLATFORM=Linux64
-else
-        PLATFORM=Linux
-endif
-
-export NEKOPATH:=/usr/lib/neko:../../library/ndll/$(PLATFORM)
-
-all:
-	haxe -cp ../library -cp src -main Main -neko bin/index.n
-	cd bin && neko index.n
+include Makefile.platform
+include Makefile.test
